# cagedoku

./: .gitignore  CLAUDE.md  README.md  archive.py  equation.py  grid.py  inp_image.py  main.py  no_gutter.py  num_rec.py  package-lock.json  package.json  pyproject.toml  sol_image.py  tsconfig.json
.claude/: settings.json  settings.local.json
.github/workflows/: pages.yml  retrain.yml  worker-deploy.yml
.playwright-mcp/: page-2026-04-14T07-16-48-658Z.yml  page-2026-04-14T07-17-19-347Z.yml  page-2026-04-14T07-17-23-571Z.yml  page-2026-04-14T07-24-25-345Z.yml  page-2026-04-14T07-25-03-098Z.yml  page-2026-04-14T07-25-45-254Z.yml  page-2026-04-30T11-03-22-395Z.yml  page-2026-04-30T11-05-35-038Z.yml  page-2026-04-30T11-08-18-612Z.yml  page-2026-04-30T11-08-30-593Z.yml  page-2026-04-30T11-12-00-750Z.yml  page-2026-04-30T11-13-24-935Z.yml  page-2026-05-01T18-03-14-168Z.yml  page-2026-05-01T18-03-27-915Z.yml  page-2026-05-01T18-03-33-260Z.yml  page-2026-05-01T18-12-37-061Z.yml  page-2026-05-01T18-21-55-876Z.yml  page-2026-05-01T18-22-10-838Z.yml  page-2026-05-01T18-36-25-678Z.yml
.serena/: project.yml
docs/: COACH.md  architecture.md  bugs.md  classic-sudoku.md  image-pipeline.md  rules.md  ui.md
docs/plans/: 2026-03-16-claude-md-design.md  auto-confirm-ocr-review.md
docs/specs/: 2026-05-18-playing-screen-layout-redesign.md  2026-05-18-playing-screen-space-optimisation.md  auto-confirm-ocr-review.md
killer_sudoku/: main.py
killer_sudoku/api/: __init__.py  app.py  config.py  schemas.py  session.py  settings.py
killer_sudoku/data/: __init__.py  num_recogniser.npz
killer_sudoku/image/: border_clustering.py  border_detection.py  cell_scan.py  config.py  debug.py  grid_location.py  inp_image.py  number_recognition.py  validation.py
killer_sudoku/output/: sol_image.py
killer_sudoku/solver/: equation.py  grid.py  puzzle_spec.py  types.py
killer_sudoku/static/: index.html  main.ts  styles.css
killer_sudoku/training/: calibrate.py  collect_classic_numerals.py  collect_numerals.py  debug_border_strips.py  debug_borders.py  evaluate.py  export_model_web.py  scrape_puzzles.py  status.py  train_border_detector.py  train_number_recogniser.py
scripts/: _r2_delete.py  _r2_download.py  _r2_list.py  collect_training.sh  mark_processed.sh
tests/: conftest.py  test_equation.py  test_grid.py  test_intersect.py  test_sol_image.py  test_train_recogniser.py
tests/api/: test_auto_solve.py  test_config_pane.py  test_coverage_gaps.py  test_endpoints.py  test_helpers.py  test_hints.py  test_rewind.py  test_schemas.py  test_session.py  test_settings.py  test_startup.py  test_virtual_cages.py
tests/e2e/: conftest.py  test_candidates.py
tests/fixtures/: candidates_puzzle.py  guardian10_puzzle.py  minimal_puzzle.py  puzzle10_fixture.py
tests/image/: test_border_clustering.py  (+7 more)
web/: browser_train.json  index.html  package-lock.json  package.json  playwright.config.ts  playwright.dev.config.ts  train_recogniser.py  train_split_recogniser.py  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
worker/: package-lock.json  package.json  wrangler.toml
(+301 files in other folders)
