[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "cagedoku"
version = "0.1.0"
description = "Killer sudoku coaching tool that reads puzzle images using OpenCV and PCA"
requires-python = ">=3.12"
dependencies = [
    "opencv-python-headless",
    "numpy",
    "scikit-learn",
    "scipy",
    "matplotlib",
    "python-constraint",
    "joblib",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.44",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
scraper = ["requests", "beautifulsoup4"]
dev = ["ruff", "mypy", "pytest", "pytest-cov", "playwright>=1.40", "pytest-playwright>=0.4", "httpx"]

[project.scripts]
cagedoku = "killer_sudoku.main:main"
coach    = "killer_sudoku.api.app:serve"
ks-collect-numerals = "killer_sudoku.training.collect_numerals:main"
ks-train-numbers = "killer_sudoku.training.train_number_recogniser:main"
ks-scrape = "killer_sudoku.training.scrape_puzzles:main"
ks-evaluate = "killer_sudoku.training.evaluate:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["killer_sudoku*"]

[tool.setuptools.package-data]
"killer_sudoku.data" = ["*.npz"]

[tool.ruff]
exclude = ["archive.py", "no_gutter.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "PLC", "PLW"]
ignore = ["PLR0912", "PLR0915", "C901"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
markers = [
    "pipeline: requires guardian/ and observer/ image directories",
    "pipeline_full: full pipeline over every image (~30-40 min); implies pipeline",
]

[tool.mypy]
strict = true
exclude = ["archive\\.py", "no_gutter\\.py"]
